# fonttools-opentype-hinting-freezer

./: AUTHORS.txt  CHANGELOG.md  CONTRIBUTORS.txt  GITHUB_WORKFLOWS_SETUP.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  README_DEVELOPMENT.md  REFACTOR_FILELIST.txt  REFACTOR_SPLITTING.md  TODO.md  llms.txt  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
github-workflows/: ci.yml  release.yml
opentype_hinting_freezer/: __init__.py  __main__.py  hintingfreezer.py
scripts/: build.sh  release.sh  test.sh
tests/: conftest.py  generate_minimal_ttf.py  test_cli_integration.py  test_error_handling.py  test_functionality.py  test_hintingfreezer_unit.py  test_performance.py
